Refactoring: Moved implementation of templates in separate files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,8 @@ add_subdirectory(execute)
 set(GCC_COVERAGE_COMPILE_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
-add_library(NiceFormatPrint Format.cpp Format.h Token.h PlaceholderPosition.cpp PlaceholderPosition.h FormatPrinter.cpp FormatPrinter.h)
+set(SOURCE_FILES Format.cpp PlaceholderPosition.cpp  FormatPrinter.cpp)
+set(HEADER_FILES Format.h PlaceholderPosition.h FormatPrinter.h Token.h)
+set(TEMPLATE_FILES Format.tpp FormatPrinter.tpp)
+
+add_library(NiceFormatPrint ${SOURCE_FILES} ${HEADER_FILES} ${TEMPLATE_FILES})
