--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,12 @@ project(NiceFormatPrint)
 set(CMAKE_CXX_STANDARD 17)
 set(GCC_COVERAGE_COMPILE_FLAGS "-Wall")
 
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
+
 add_compile_options(-Wall)
 
 add_subdirectory(execute)
+add_subdirectory(tests)
 
 set(SOURCE_FILES
         Format.cpp
