Added 1. test. Checks if valid placeholder are inserted in format.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,4 +2,7 @@ include(FetchCatchFromGit)
 
 add_executable(unit_tests test-main.cpp test-format-number.cpp)
 
-target_link_libraries(unit_tests PRIVATE Catch2::Catch2)
+target_link_libraries(unit_tests PRIVATE
+        Catch2::Catch2
+        NiceFormatPrint
+        )
