Added tests for exception thrown if format or args are wrong.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 include(FetchCatchFromGit)
 
-add_executable(unit_tests test-main.cpp test-format-number.cpp)
+add_executable(unit_tests test-main.cpp test-format-number.cpp test-invalid.cpp)
 
 target_link_libraries(unit_tests PRIVATE
         Catch2::Catch2
