Created test for empty placeholder placement.
TODO: Needs implementation for passing test.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,13 @@
 include(FetchCatchFromGit)
 
-add_executable(unit_tests test-main.cpp test-format-number.cpp test-invalid.cpp)
+add_executable(unit_tests
+        test-main.cpp
+        test-format-number.cpp
+        test-invalid.cpp
+        test-empty-placeholders.cpp
+)
 
 target_link_libraries(unit_tests PRIVATE
         Catch2::Catch2
         NiceFormatPrint
-        )
+)
