Moved implementation from Token struct into separate source file.
Added data for left or right padding.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCE_FILES
         FormatArgsMerger.cpp
         InvalidFormat.cpp
         Tokenization.cpp
+        Token.cpp
         )
 set(HEADER_FILES
         Format.h
