Renamed target name and provided a guide how to integrate it in cmake build process.

--- a/execute/CMakeLists.txt
+++ b/execute/CMakeLists.txt
@@ -1,4 +1,4 @@
 
 add_executable(execution main.cpp)
 
-target_link_libraries(execution PRIVATE NiceFormatPrint)
+target_link_libraries(execution PRIVATE NiceGraphic_FormatOutput)
